# merak

./: .gitignore  Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: lib.rs  storage.rs  typechecker.rs
analyzer/src/refinements/: constraints.rs  environment.rs  inference.rs  mod.rs  qualifiers.rs  smt.rs  solver.rs  templates.rs
analyzer/tests/: common.rs  name_resolution.rs  refinements.rs  storage.rs  typechecking.rs
analyzer/tests/refinements/: constraints.rs  inference.rs  templates.rs
ast/: Cargo.toml
ast/src/: contract.rs  expression.rs  function.rs  lib.rs  meta.rs  node_id.rs  predicate.rs  statement.rs  types.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/analysis/: liveness.rs  mod.rs  stack_allocator.rs  stack_depth.rs
codegen/src/codegen/: functions.rs  instructions.rs  mod.rs  stack_shuffler.rs  storage_ops.rs  terminators.rs
codegen/src/evm/: abi.rs  bytecode.rs  mod.rs  opcodes.rs
codegen/src/layout/: contract.rs  memory.rs  mod.rs  storage.rs
codegen/src/lowering/: mod.rs  type_lowering.rs
codegen/src/opt/: mod.rs
codegen/src/opt/lowered/: dead_code.rs  mod.rs
codegen/tests/: README.md  analyze_bytecode.rs  common.rs  debug_params.rs  debug_storage.rs  debug_test.rs  integration.rs
errors/: Cargo.toml
errors/src/: lib.rs
examples/: 01_simple_counter.merak  02_refinement_types.merak  03_loops_invariants.merak  04_requires_ensures.merak  05_function_types.merak  auxfunc.merak  auxvar.merak  basic_vault.merak  test_conflicting_modifiers.merak  test_invalid_modifiers.merak  test_modifiers.merak
ir/: Cargo.toml
ir/src/: lib.rs  ssa_ir.rs
ir/src/transformers/: ssa.rs
ir/tests/: cfg_basics.rs  common.rs  control_flow_ssa.rs  instructions.rs  storage.rs
merak/: Cargo.toml
merak-cli/: Cargo.toml
merak-cli/src/: main.rs
merak/src/: lib.rs
merak/tests/: integration_tests.rs
parser/: Cargo.toml
parser/src/: helpers.rs  lib.rs  merak.lalrpop
parser/tests/: parser_roundtrip.rs  return_insertion_test.rs
symbols/: Cargo.toml
symbols/src/: lib.rs  symbol_table.rs
