[package]
name = "merak-analyzer"
description = "merak code analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
merak-ast.workspace = true
merak-parser.workspace = true
merak-errors.workspace = true
merak-symbols.workspace = true
merak-ir.workspace = true
z3 = "0.13.3"
primitive-types = "0.13.1"
lazy_static = "1.5.0"

[dev-dependencies]
indexmap = "2.0"